--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -6,7 +6,10 @@
   background: #eee;
 }
 .h-custom {
-  height: calc(100% - 73px);
+  height: calc(100% - 72px);
+}
+.-mt-3 {
+  margin-top: -18px;
 }
 @media (max-width: 450px) {
   .h-custom {
