--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,40 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.-mt-3 {
+  margin-top: -18px;
+}
+.-mb-3 {
+  margin-bottom: -18px;
+}
+
+.divider:after,
+.divider:before {
+  content: "";
+  flex: 1;
+  height: 1px;
+  background: #eee;
+}
+.h-custom {
+  height: calc(100% - 72px);
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(54, 54, 54, 0.3);
+  background-color: #fff;
+}
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: #fff;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #7a7a7a;
+}
+
+@media (max-width: 450px) {
+  .h-custom {
+    height: 100%;
+  }
+}
